--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "6.11.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.525.0",
     "multer": "^2.0.1",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "pgvector": "^0.2.1",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
