Create a simpler way to deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # Next.js Application
+  # Next.js Application for local development
   app:
     build:
       context: .
@@ -32,14 +32,18 @@ services:
       postgres:
         condition: service_healthy
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/luna?schema=public
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - UPLOAD_DIR=/app/uploads
-      - MAX_FILE_SIZE=10485760
+      - NEXTAUTH_URL=http://localhost:3000
+      - NEXTAUTH_SECRET=your-secret-key-for-local-development
+      - GITHUB_ID=${GITHUB_ID}
+      - GITHUB_SECRET=${GITHUB_SECRET}
+      - ALLOWED_GITHUB_USERNAME=${ALLOWED_GITHUB_USERNAME}
     volumes:
       - ./uploads:/app/uploads
       - ./prisma:/app/prisma
+      - ./.env:/app/.env
     ports:
       - "3000:3000"
     networks:
@@ -52,47 +56,9 @@ services:
         npx prisma generate &&
         echo 'Running database migrations...' &&
         npx prisma migrate deploy &&
-        echo 'Creating uploads directory...' &&
-        mkdir -p /app/uploads &&
         echo 'Starting Next.js server...' &&
         node server.js
       "
-
-  # Development service (optional)
-  dev:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    container_name: luna-dev
-    restart: unless-stopped
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      - NODE_ENV=development
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/luna?schema=public
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - UPLOAD_DIR=/app/uploads
-      - MAX_FILE_SIZE=10485760
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - /app/.next
-    ports:
-      - "3001:3000"
-    networks:
-      - luna-network
-    command: >
-      sh -c "
-        echo 'Waiting for database...' &&
-        sleep 10 &&
-        npx prisma generate &&
-        npx prisma migrate dev --name init &&
-        mkdir -p /app/uploads &&
-        npm run dev
-      "
-    profiles:
-      - dev
 
 volumes:
   postgres_data:
